# cef-screenshot

./: .gitignore  .npmrc  Cargo.toml  README.md  cef-screenshot.cjs  index.d.ts  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  puppeteer-types.ts  tsconfig.build.json  tsconfig.json
.github/agents/: build-release.agent.md
.github/workflows/: build.yml  release.yml
benchmark/: bench-cef.ts  bench-puppeteer.ts  compare.ts  utils.ts
cef-helper/: CMakeLists.txt  main.cpp
ci/toolchains/: aarch64-linux-gnu.cmake  armv7-linux-gnueabihf.cmake
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: .npmignore  README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: interactive.ts  pack.ts  postinstall.mjs  postinstall.ts  setup.ts
src/: lib.rs
test/: integration.mjs  test-concurrent.ts  test-options.ts  test-selector.ts  test.ts  verify-install.mjs
