[package]
name = "cef-screenshot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["process", "io-util", "fs", "sync", "rt", "time"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = "z"
strip = true
